# hack_the_hack

./: README copy.md  README.md  deployment-engineer.md  fastapi-pro.md  idea-generator.md  presentation-pro.md
.claude/agents/: docs-architect.md  idea-generator.md  presentation-pro.md  python-pro.md
projects/delegate-ai/: DEPLOYMENT_GUIDE.md  README.md  deploy.sh  example_usage.py  requirements.txt  test-deployment.sh  validate-setup.py
projects/delegate-ai/ai_system/: __init__.py  config.py
projects/delegate-ai/backend/: .env.example  .env.production  .gitignore  Dockerfile  Makefile  PROJECT_OVERVIEW.md  Procfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json  requirements.txt  start.sh  validate_setup.py
projects/delegate-ai/backend/alembic/: env.py
projects/delegate-ai/backend/app/: main.py
projects/delegate-ai/backend/app/api/v1/: api.py
projects/delegate-ai/backend/app/api/v1/endpoints/: agents.py  auth.py  calendar.py  emails.py  meetings.py  tasks.py  users.py
projects/delegate-ai/backend/app/auth/: __init__.py  deps.py  oauth.py
projects/delegate-ai/backend/app/background_jobs/: __init__.py  tasks.py  worker.py
projects/delegate-ai/backend/app/core/: config.py  database.py  redis.py  security.py
projects/delegate-ai/backend/app/models/: __init__.py  agent.py  email.py  meeting.py  notification.py  task.py  user.py
projects/delegate-ai/backend/app/schemas/: __init__.py  agent.py  auth.py  email.py  meeting.py  notification.py  task.py  user.py
projects/delegate-ai/backend/app/services/: __init__.py  agent.py  calendar.py  email.py  meeting.py  task.py  user.py
projects/delegate-ai/backend/app/websocket/: __init__.py  manager.py
projects/delegate-ai/backend/scripts/: start.sh
projects/delegate-ai/backend/tests/: conftest.py  test_main.py
projects/delegate-ai/frontend/: .env.local.example  .env.production  README.md  package-lock.json  package.json  vercel.json
projects/delegate-ai/presentation/: README.md  index.html
projects/meeting-assassin/: .env.example  GOOGLE_CALENDAR_SETUP.md  README.md  demo_avatar.py  demo_calendar_integration.py  main.py  requirements.txt  requirements_google_calendar.txt  run.py
(+130 files in other folders)
